--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ section{
 */
 
 .home h1{
-    font-size: 50px;
+    font-size: 70px;
     font-weight: 500;
     text-transform: uppercase;
     text-shadow: 0 15px 20px #000000b0;
@@ -248,10 +248,10 @@ section{
 
 .home img{
     border-radius: 50%;
-    width: 20%;
-    margin: 40px 0;
-    border: 6px solid #88EC46;
-    height: 20%;
+    width: 40%;
+    margin: 60px 0;
+    border: 3px solid grey;
+    height: 40%;
 }
 
 .home h5{
